# meta-ralph

./: .gitignore  DESIGN.md  README.md  SKILL.md  install.ps1  install.sh
.github/workflows/: latest-release.yml  release.yml
assets/: prd-template.json
dashboard/: communication_bus.py  demo_pm_roles.py  kimi_yolo_runner.py  launcher.py  requirements.txt  run_kimi_yolo.exp  server.py
dashboard/core/: __init__.py  ai_execution.py  chat_formatter.py  config.py  context.py  dynamic_swarm.py  environment.py  memory.py  models.py  orchestrator.py  paths.py  plan.py  pm_analysis.py  registry.py  repo_parser.py  role_skills_registry.yaml  skills_registry.py
dashboard/static/: app.js  index.html  manifest.json  offline.html  service-worker.js  style.css
dashboard/tests/: test_aggregator_role.py  test_architect_role.py  test_chat_formatter.py  test_communication_bus.py  test_context.py  test_dispatcher_role.py  test_dynamic_swarm.py  test_engineer_role.py  test_engineer_squad_role.py  test_environment.py  test_memory.py  test_plan.py  (+23 more)
frontend/: index.html
references/: metagpt-roles.md  orchestrator-prompt.md  qa-prompt-template.md  worker-prompt-template.md
scripts/: agenticflow  agenticflow.cmd  build-sidecar.ps1  build-sidecar.sh  create-worktree.sh  dispatch-workers.sh  finalize-batch.sh  merge-batch.sh  meta-ralph.cmd  meta-ralph.sh  remove-worktree.sh  update-board.sh  update-worker-state.sh  validate.sh  validate_install.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+105 files in other folders)
