[package]
name = "agenticflow"
version = "0.5.0"
description = "AgenticFlow desktop app"
authors = ["Fabriccio Tornero"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[features]
default = []
